Добавлена работа с пользователями

--- a/LogKyrcach/appsettings.json
+++ b/LogKyrcach/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LogKyrcach-3F4D9AA4-A2A0-4241-B8EE-74DC8E09B234;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DbConnection": "server=localhost;port=3306;user=root;password=Masmetus2018;database=software"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApplication3-C6022BFB-4F31-4DE6-A280-4A6CC771F00A;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DbConnection": "server=localhost;port=3306;user=root;password=Password;database=software"
   },
   "Logging": {
     "LogLevel": {
